# info606-sync-process-tp

./: .gitignore  .gitmodules  Makefile.am  README.md  clientCOL3.c  clientCOL3.h  configure.ac  hutte.txt  main.c
col3-bib/: communCOL3.h
col3-bibtp/: communCOL3-TP.c  communCOL3-TP.h
