dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(col3_client_etu, 2020.1)
AC_CONFIG_SRCDIR([main.c])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11 foreign])

AM_SILENT_RULES([yes])

AC_PROG_CC

AC_CONFIG_SUBDIRS([col3-bibtp1])




AC_OUTPUT([
Makefile
])
